@@ -39,7 +39,22 @@
 #'     lines(sg.smooth(y, l = 25),col="blue", lwd=2)
 #'     lines(sg.smooth(y, l = 10),col="green", lwd=2)
 #'   
-#' @export
+#'  #### function applied to a raster stack  and sp object
+#'  library(raster)
+#'  
+#'  random.raster <- function(r=50, c=50, l=10, min=0, max=1){ 
+#'    do.call(stack, replicate(l, raster(matrix(runif(r*c, min, max),r,c))))
+#'  }
+#'  r <- random.raster()
+#'  
+#'  # raster stack example
+#'  ( r.sg <- calc(r, sg.smooth) )  
+#'  
+#'  # sp SpatialPixelsDataFrame example
+#'  r.sp <- as(r, "SpatialPixelsDataFrame")
+#'  r.sp@data <- as.data.frame(t(apply(r.sp@@data, MARGIN=1, FUN=sg.smooth)))
+#'
+#' @export sg.smooth
 sg.smooth <- function(x, f = 4, l = 51, d = 1, na.rm, ...) {
   na.idx <- which(is.na(x))
     x <- stats::na.omit(x)
